--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,16 @@
 	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
  }
+ a:link, a:visited {
+    background-color: graytext;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: graytext;
+}
