--- a/css/main.css
+++ b/css/main.css
@@ -30,13 +30,37 @@ a:hover, a:active {
     background-color: graytext;
 }
 
-select {
+select {  
   /* ... */
-  width: 100%;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  border: none;
+  width: 25%;
   height: 40px;
   padding-left: 10px;
   background: url(fff-0-2.png) repeat;
-  color: #fff;
+  color: #434547;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
+}
+
+.select-wrapper:before {
+  font-family: fontello;
+  content: "\f107";
+  font-size: 20px;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  color: #fff;
+}
+
+.select-wrapper:before {
+  /* ... */
+  pointer-events: none;
 }
