--- a/css/main.css
+++ b/css/main.css
@@ -64,3 +64,12 @@ select {
   /* ... */
   pointer-events: none;
 }
+
+input[type=submit] {
+    padding:5px 15px; 
+    background:#ccc; 
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
+}
