--- a/css/main.css
+++ b/css/main.css
@@ -15,16 +15,20 @@
  	-webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+    font-family: Arial;
  }
  a:link, a:visited {
-    background-color: graytext;
-    color: white;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+     padding:5px 15px;
+     background:#ccc;
+     border:0 none;
+     -webkit-border-radius: 5px;
+     border-radius: 5px;
+     font-family: Arial;
+     color: black;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
 }
-
 
 a:hover, a:active {
     background-color: graytext;
@@ -40,7 +44,7 @@ select {
   width: 25%;
   height: 40px;
   padding-left: 10px;
-  background: url(fff-0-2.png) repeat;
+  background: white;
   color: #434547;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
@@ -61,7 +65,6 @@ select {
 }
 
 .select-wrapper:before {
-  /* ... */
   pointer-events: none;
 }
 
@@ -71,5 +74,6 @@ input[type=submit] {
     border:0 none;
     cursor:pointer;
     -webkit-border-radius: 5px;
-    border-radius: 5px; 
+    border-radius: 5px;
+    font-family: Arial;
 }
