--- a/css/main.css
+++ b/css/main.css
@@ -17,60 +17,22 @@
 	box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
     font-family: Arial;
  }
- a:link, a:visited {
+  .linkbutton a:link, a:visited {
      padding:5px 15px;
      background:#ccc;
      border:0 none;
      -webkit-border-radius: 5px;
      border-radius: 5px;
      font-family: Arial;
-     color: black;
+     color: #000000;
      text-align: center;
      text-decoration: none;
      display: inline-block;
 }
 
-a:hover, a:active {
-    background-color: graytext;
-}
-
-select {  
-  /* ... */
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  position: relative;
-  border: none;
-  width: 25%;
-  height: 40px;
-  padding-left: 10px;
-  background: white;
-  color: #434547;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
-  border-radius: 3px;
-  outline: none;
-  cursor: pointer;
-}
-
-.select-wrapper:before {
-  font-family: fontello;
-  content: "\f107";
-  font-size: 20px;
-  position: absolute;
-  right: 15px;
-  top: 10px;
-  color: #fff;
-}
-
-.select-wrapper:before {
-  pointer-events: none;
-}
-
 input[type=submit] {
-    padding:5px 15px; 
-    background:#ccc; 
+    padding:5px 15px;
+    background:#ccc;
     border:0 none;
     cursor:pointer;
     -webkit-border-radius: 5px;
